--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
      <h1>Zhou Fang</h1>
 
      <p>
-       <img src="zhou-fang.jpg" alt="Zhou Fang" />
+       <img src="zhou-fang.jpg" width="180" height="150" alt="Zhou Fang" />
      </p>
 
      <address>
