change the address structure

--- a/resume.html
+++ b/resume.html
@@ -14,8 +14,8 @@
      </p>
 
      <address>
-       7275,SW90th ST,#C412</br>
-       Miami,FL
-       University of Miami,School of Communication.
+       7275,SW90th ST,#C412
+       Miami,FL</br>
+       University of Miami,</br>School of Communication.
      </address>
    </header>
