--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
  </head>
 
  <body>
-   <header>
+   <header id="contact">
      <h1>Zhou Fang</h1>
 
      <p>
@@ -16,6 +16,19 @@
      <address>
        7275,SW90th ST,#C412
        Miami,FL</br>
-       University of Miami,</br>School of Communication.
+       University of Miami,</br>School of Communication.</br>
+       Email:zxf76@miami.edu</br>
+       <a href="https://twitter.com/ZhouUM">Tweeter</a>
      </address>
    </header>
+   <nav>
+     <ul>
+       <li><a href="#contact">Contact</a></li>
+       <li><a href="#education">Education</a></li>
+       <li><a href="#work experience">Work Experience</a></li>
+       <li><a href="#College and Community Activities">College and Community Activities </a></li>
+       <li><a href="Research Experience">Research Experience</a></li>
+       <li><a href="special award">Special Award</a></li>
+       <li><a href="qualifications and Capabilities">Qualifications and Capabilities</a></li>
+     </ul>
+  </nav>
