complete work experience

--- a/resume.html
+++ b/resume.html
@@ -32,3 +32,61 @@
        <li><a href="qualifications and Capabilities">Qualifications and Capabilities</a></li>
      </ul>
   </nav>
+
+  <main>
+
+    <section id="education">
+      <h2>Education</h2>
+
+      <article>
+        <p>
+          <ul>
+            <li>On study</br>
+              <strong><abbr title="Master of Arts">M.A.</abbr>in Journalism</strong></br>
+              <a href="http://www.miami.edu">University of Miami</a>,Miami,Florida.</li>
+          </ul>
+        </p>
+      </article>
+
+      <article>
+        <p>
+          <ul>
+            <li>June.2015</br>
+              <strong><abbr title="Bachelor of Arts">B.A.</abbr>in Journalism</strong></br>
+              <a href=“http://www.ecupl.edu.cn/”>East China University of Political Science and Law</a>,Shanghai,China.</li>
+          </ul>
+        </p>
+      </article>
+    </section>
+
+    <section id="work experience">
+      <h2>Work Experience</h2>
+
+      <article>
+       <p>
+         <ul>
+           <li>
+             <p>April.2014-Dec.2014</br>
+               <strong>Department of Economic News,<a href="http://www.jfdaily.com/">Jiefang Daily(Shanghai)</a></strong></br>
+               <em>Journalist</em></br>
+               <ol>
+                 <li><p>Participate in the interviews at release conference, forums and corporations, organize notes and write reports.</p></li>
+                 <li><p>Have over 20 reports published in the Jiefang Daily (including 1 in the front page, and 1 in the special page).</p></li>
+                 <li><p>Participate in the China Dream Photography Exhibition event, allocate and label hundreds of works, decorate the stage and assist the judges of the committee. </p></li>
+               </ol>
+             </p>
+           </li>
+
+           <li>
+             <p>Dec.2014-May.2015</br>
+                <strong>Department of <a href="http://www.f1express.cn/">Formula One Express</a>, Jingwu Sports(Shanghai)</strong></br>
+                <em>Editor</em>
+                <ol>
+                  <li><p>In charge of the company’s blogs, draft and update daily news, broadcast on the game days.</p></li>
+                  <li><p>Participate in the production of the Formula One Express Magazine.</p></li>
+                </ol>
+             </p>
+           </li>
+         </ul>
+       </p>
+    </article>
