complete College and Community Activities

--- a/resume.html
+++ b/resume.html
@@ -41,9 +41,10 @@
       <article>
         <p>
           <ul>
-            <li>On study</br>
-              <strong><abbr title="Master of Arts">M.A.</abbr>in Journalism</strong></br>
-              <a href="http://www.miami.edu">University of Miami</a>,Miami,Florida.</li>
+            <li>
+              <p>On study</p>
+              <p><strong><abbr title="Master of Arts">M.A.</abbr>in Journalism</strong></p>
+              <p><a href="http://www.miami.edu">University of Miami</a>,Miami,Florida.</p></li>
           </ul>
         </p>
       </article>
@@ -51,9 +52,10 @@
       <article>
         <p>
           <ul>
-            <li>June.2015</br>
-              <strong><abbr title="Bachelor of Arts">B.A.</abbr>in Journalism</strong></br>
-              <a href=“http://www.ecupl.edu.cn/”>East China University of Political Science and Law</a>,Shanghai,China.</li>
+            <li>
+              <p>June.2015</p>
+              <p><strong><abbr title="Bachelor of Arts">B.A.</abbr>in Journalism</strong></p>
+              <p><a href=“http://www.ecupl.edu.cn/”>East China University of Political Science and Law</a>,Shanghai,China.</p></li>
           </ul>
         </p>
       </article>
@@ -66,9 +68,10 @@
        <p>
          <ul>
            <li>
-             <p>April.2014-Dec.2014</br>
-               <strong>Department of Economic News,<a href="http://www.jfdaily.com/">Jiefang Daily(Shanghai)</a></strong></br>
-               <em>Journalist</em></br>
+             <p>April.2014-Dec.2014</p>
+             <p><strong>Department of Economic News,<a href="http://www.jfdaily.com/">Jiefang Daily(Shanghai)</a></strong></p>
+             <p><em>Journalist</em></p>
+             <p>
                <ol>
                  <li><p>Participate in the interviews at release conference, forums and corporations, organize notes and write reports.</p></li>
                  <li><p>Have over 20 reports published in the Jiefang Daily (including 1 in the front page, and 1 in the special page).</p></li>
@@ -78,10 +81,11 @@
            </li>
 
            <li>
-             <p>Dec.2014-May.2015</br>
-                <strong>Department of <a href="http://www.f1express.cn/">Formula One Express</a>, Jingwu Sports(Shanghai)</strong></br>
-                <em>Editor</em>
-                <ol>
+             <p>Dec.2014-May.2015</p>
+             <p><strong>Department of <a href="http://www.f1express.cn/">Formula One Express</a>, Jingwu Sports(Shanghai)</strong></p>
+             <p><em>Editor</em></p>
+             <p>
+               <ol>
                   <li><p>In charge of the company’s blogs, draft and update daily news, broadcast on the game days.</p></li>
                   <li><p>Participate in the production of the Formula One Express Magazine.</p></li>
                 </ol>
@@ -90,3 +94,46 @@
          </ul>
        </p>
     </article>
+
+    <section id="College and Community Activities">
+      <h2>College and Community Activities</h2>
+
+      <article>
+        <h3>College Activities</h3>
+        <ul>
+          <li>
+            <p>Sep.2011–May.2014</p>
+            <p><strong><a href="http://i.youku.com/u/UMzI5NjEyNzA0">Culture and Arts Association</a>(<a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a>)</strong></p>
+            <p><em>Vice Secretary</em></p>
+            <ol>
+              <li><p>Directed two Meeting Professional Educators seminars: invite Artist Gu Haohao and Novelist Wang Ruoxu to be the guest speakers, plan the details of the lecture operation, produce videos, decorate the stage and file the relevant documents.</p></li>
+              <li><p>Participated in the Youth Choir Competition of the ECUPL, coordinate with other participants, decorate the performance stage and direct the performance.</p></li>
+              <li><p>Shoot cameras, produce videos and write news articles for the university performances.</p></li>
+            </ol>
+          </li>
+
+          <li>
+            <p>Sep.2012–May.2013</p>
+            <p><strong><a href="http://www.rwxy.ecupl.edu.cn/">Xinshi Media</a>(<a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a>)</strong></p>
+            <p><em>Associate Director</em></p>
+            <ol>
+              <li><p>Online promotion, including promulgate university news and club events.</p></li>
+            </ol>
+          </li>
+        </ul>
+
+        <h3>Community Activities</h3>
+        <h4>Volunteer</h4>
+        <ul>
+          <li>
+            <p>July.2014</p>
+            <p><strong><a href="http://www.misa.org.cn/WebSite/SummerMisa/2015/CN/Misa.html">Music in the Summer Air</a></strong></p>
+            <p>Guiding audience and mediate conflicts between merchants.</p>
+          </li>
+
+          <li>
+            <p>May.2015</p>
+            <p><stong><a href=http://www.strawberrymusic.com/home.aspx>Shanghai Strawberry Music Festival</a></strong></p>
+            <p>Receiving singers</p>
+          </li>
+        </ul>
