--- a/resume.html
+++ b/resume.html
@@ -137,3 +137,21 @@
             <p>Receiving singers</p>
           </li>
         </ul>
+    </section>
+
+    <section id="Research Experience">
+      <h2>Research Experience</h2>
+      <ul>
+        <li>
+          <p>Feb.2014</p>
+          <p><strong>The Status Quo of Storytelling and Ballad Singing in Suzhou dialect, an intangible Cultural Heritage</strong></p>
+          <p>Write bidding document, draft schedule and event budget, ensure accommodation and transportation, organize records and join the thesis defense for the research group. </p>
+        </li>
+
+        <li>
+          <p>Nov.2014</p>
+          <p><strong>The Development of Art Troupes in Non-arts colleges</strong></p>
+          <p>Draft schedule, contact schools, lead the research team during investigation and draft the final thesis for the research group.</p>
+        </li>
+      <ul>
+    </section>
