complete awards and navigation

--- a/resume.html
+++ b/resume.html
@@ -21,15 +21,15 @@
        <a href="https://twitter.com/ZhouUM">Tweeter</a>
      </address>
    </header>
-   <nav>
+   <nav id="Navigation">
      <ul>
        <li><a href="#contact">Contact</a></li>
        <li><a href="#education">Education</a></li>
        <li><a href="#work experience">Work Experience</a></li>
        <li><a href="#College and Community Activities">College and Community Activities </a></li>
-       <li><a href="Research Experience">Research Experience</a></li>
-       <li><a href="special award">Special Award</a></li>
-       <li><a href="qualifications and Capabilities">Qualifications and Capabilities</a></li>
+       <li><a href="#Research Experience">Research Experience</a></li>
+       <li><a href="#Special Awards">Special Awards</a></li>
+       <li><a href="#qualifications and Capabilities">Qualifications and Capabilities</a></li>
      </ul>
   </nav>
 
@@ -59,6 +59,7 @@
           </ul>
         </p>
       </article>
+      <p><a href="#Navigation">Navigation</a></p>
     </section>
 
     <section id="work experience">
@@ -93,7 +94,9 @@
            </li>
          </ul>
        </p>
+       <p><a href="#Navigation">Navigation</a></p>
     </article>
+    </section>
 
     <section id="College and Community Activities">
       <h2>College and Community Activities</h2>
@@ -121,7 +124,9 @@
             </ol>
           </li>
         </ul>
+    </article>
 
+    <article>
         <h3>Community Activities</h3>
         <h4>Volunteer</h4>
         <ul>
@@ -137,10 +142,13 @@
             <p>Receiving singers</p>
           </li>
         </ul>
+        <p><a href="#Navigation">Navigation</a></p>
+    </article>
     </section>
 
     <section id="Research Experience">
       <h2>Research Experience</h2>
+      <article>
       <ul>
         <li>
           <p>Feb.2014</p>
@@ -153,5 +161,36 @@
           <p><strong>The Development of Art Troupes in Non-arts colleges</strong></p>
           <p>Draft schedule, contact schools, lead the research team during investigation and draft the final thesis for the research group.</p>
         </li>
+      </ul>
+      <p><a href="#Navigation">Navigation</a></p>
+      </article>
+    </section>
+
+    <section id="Special Awards">
+      <h2>Special Awards</h2>
+      <article>
       <ul>
+        <li>
+          <p>2011</p>
+          <p>Social Work Scholarship of the year at <a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a></p>
+        </li>
+        <li>
+          <p>2012</p>
+          <p>Social Work Scholarship of the year at <a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a></p>
+        </li>
+        <li>
+          <p>2013</p>
+          <ol>
+            <li>
+            <p>Social Work Scholarship of the year at <a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a></p></li>
+            <li><p>Merit member of the Youth League of the year</p></li>
+          </ol>
+        </li>
+        <li>
+          <p>2014</p>
+          <p>Social Work Scholarship of the year at <a href="http://www.ecupl.com.cn/">East China University of Political Science and Law</a></p>
+        </li>
+      </ul>
+      <p><a href="#Navigation">Navigation</a></p>
+    </article>
     </section>
