complete main part

--- a/resume.html
+++ b/resume.html
@@ -194,3 +194,26 @@
       <p><a href="#Navigation">Navigation</a></p>
     </article>
     </section>
+
+    <section id="Qualifications and Capabilities">
+      <h2>Qualifications and Capabilities</h2>
+      <article>
+        <ul>
+          <li><p>Bilingual in Mandarin and English: Qualified as an Intermediate Interpreter</p></li>
+          <li><p>Piano Certificate: Level 8</p></li>
+          <li><p>Computer skills Acquired</p>
+            <ol>
+              <li><p>Microsoft Word, Excel, PowerPoint</p></li>
+              <li><p>Adobe <abbr title="After Effect">AE</abbr>,<abbr title="Illustrator">AI</abbr>,<abbr title="Premiere">PRE</abbr> and Video producing soft-wares.</p></li>
+            </ol>
+          </li>
+        </ul>
+        <p><a href="#Navigation">Navigation</a></p>
+      </article>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>
+      <small>
