--- a/resume.html
+++ b/resume.html
@@ -216,4 +216,16 @@
 
   <footer>
     <p>
-      <small>
+      <small>Last updated:
+        <script>
+            var updated = document.lastModified;
+            document.write(updated);
+        </script>
+    </p>
+    <p>
+        <a href="#contact">Contact Me</a>
+      </small>
+    </p>
+    </footer>
+</body>
+</html>
