--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,9 @@
               <p><strong>On study</strong></p>
               <p><abbr title="Master of Arts">M.A.</abbr>in Journalism</p>
               <p><a href="http://www.miami.edu">University of Miami</a>,Miami,Florida.</p>
+     </article>
+
+     <article>
               <p><strong>June.2015</strong></p>
               <p><abbr title="Bachelor of Arts">B.A.</abbr>in Journalism</p>
               <p><a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a>,Shanghai,China.</p>
@@ -63,6 +66,9 @@
                  <li>Have over 20 reports published in the Jiefang Daily</li>
                  <li>Participate in the China Dream Photography Exhibition event</li>
                </ul>
+      </article>
+
+      <article>
 
              <p><strong>Dec.2014-May.2015</strong></p>
              <p>Department of <a href="http://www.f1express.cn/">Formula One Express</a>, Jingwu Sports(Shanghai)</p>
@@ -90,7 +96,9 @@
               <li>Participate in the Youth Choir Competition of the ECUPL.</li>
               <li>Shoot cameras, produce videos and write news articles.</li>
             </ul>
+      </article>
 
+      <article>
             <p><strong>Sep.2012–May.2013</strong></p>
             <p><a href="http://www.rwxy.ecupl.edu.cn/">Xinshi Media</a>(<a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a>)</p>
             <p><em>Associate Director</em></p>
@@ -105,8 +113,9 @@
             <p><strong>July.2014</strong></p>
             <p><a href="http://www.misa.org.cn/website/summermisa/2015/cn/misa.html">Music in the Summer Air</a></p>
             <p>Guiding audience and mediate conflicts between merchants.</p>
+    </article>
 
-
+    <article>
             <p><strong>May.2015</strong></p>
             <p><a href="http://www.strawberrymusic.com/home.aspx">Shanghai Strawberry Music Festival</a></p>
             <p>Receiving singers</p>
@@ -122,7 +131,9 @@
           <p><strong>Feb.2014</strong></p>
           <p>The Status Quo of Storytelling and Ballad Singing in Suzhou dialect, an intangible Cultural Heritage</p>
           <p>Write bidding document, draft schedule and event budget, ensure accommodation and transportation, organize records and join the thesis defense for the research group. </p>
+      </article>
 
+      <article>
           <p><strong>Nov.2014</strong></p>
           <p>The Development of Art Troupes in Non-arts colleges</p>
           <p>Draft schedule, contact schools, lead the research team during investigation and draft the final thesis for the research group.</p>
@@ -134,17 +145,22 @@
     <section id="special-awards">
       <h2>Special Awards</h2>
       <article>
-
           <p><strong>2011</strong></p>
           <p>Social Work Scholarship of the year at <a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a></p>
+      </article>
 
+      <article>
           <p><strong>2012</strong></p>
           <p>Social Work Scholarship of the year at <a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a></p>
+      </article>
 
+      <article>
           <p><strong>2013</strong></p>
           <p>Social Work Scholarship of the year at <a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a></p>
           <p>Merit member of the Youth League of the year</p>
+      </article>
 
+      <article>
           <p><strong>2014</strong></p>
           <p>Social Work Scholarship of the year at <a href="http://www.ecupl.edu.cn/">East China University of Political Science and Law</a></p>
 
